# alphastats

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: config.yaml
.github/workflows/: auto-release-on-pyproject-version-update.yaml  pr-version-labeler.yaml  test.yaml
alphastats/: __init__.py  _utils.py  exceptions.py  reports.py  stats.py
scripts/: commit-msg.py  git-hooks.sh
tests/: test_quantstats_parity.py  test_stats.py
