[project]
name = "alphastats"
version = "0.1.0"
description = "Blazing-fast portfolio analytics powered by Polars, with a QuantStats-style API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["polars>=1.0.0,<2"]

[dependency-groups]
dev = [
    "mypy==1.15.0",
 "pre-commit>=4.2.0",
 "pytest>=8.3.5",
 "pytest-asyncio>=1.0.0",
 "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = false
show_column_numbers = true
pretty = true

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    "node_modules",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"constants.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
